# etalang

./: Makefile  README.md  main.c  main.cc  meson.build
examples/: binary_search.n  bubble_sort.n  external_lib.n  fact.n  fibo.n  hello.n  palindrome.n  raylib.n
src/ast/: ast.c  ast.cc  ast.h  meson.build
src/eval/: builtin.cc  eval.c  eval.cc  eval.h  meson.build
src/eval/src/builtins/: builtins.c  builtins.h  meson.build
src/eval/src/core/: builtinfn.c  core.h  expressions.c  meson.build  statements.c
src/eval/src/eval_def/: eval_def.h  meson.build
src/exec/: exec.c  exec.cc  exec.h  meson.build
src/gc/: gc.c  gc.cc  gc.h  meson.build
src/lexer/: lexer.c  lexer.cc  lexer.h  meson.build
src/lexer/src/keywords/: keywords.c  keywords.h  meson.build
src/lexer/src/specialchars/: meson.build  specialchars.c  specialchars.h
src/object/: meson.build  object.cc  object.h
src/objects/: meson.build  objects.c  objects.h
src/parser/: meson.build  parser.c  parser.cc  parser.h
src/parser/src/core/: core.h  expressions.c  meson.build  statements.c
src/parser/src/infixfns/: infixfns.c  infixfns.h  meson.build
src/parser/src/parser_def/: meson.build  parser_def.h
src/parser/src/precedences/: meson.build  precedences.c  precedences.h
src/parser/src/prefixfns/: meson.build  prefixfns.c  prefixfns.h
src/repl/: meson.build  repl.c  repl.cc  repl.h
src/scope/: meson.build  scope.c  scope.cc  scope.h
src/token/: meson.build  token.cc  token.h
src/tokens/: meson.build  tokens.c  tokens.h
src/ut/: meson.build  utarray.h
